--- a/wpk/package.json
+++ b/wpk/package.json
@@ -22,7 +22,9 @@
     "gulp": "^3.9.1",
     "image-webpack-loader": "^1.6.3",
     "jsx-loader": "^0.13.2",
+    "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
